--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
-  <h3>hi</h3>
+  <div id="dino-barn"></div>
+
   <script src="main.js"></script>
 </body>
 </html>
