--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div id="dino-barn"></div>
-
+  <div id="assignments"></div>
   <script src="main.js"></script>
 </body>
 </html>
